# generals-tournament

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  game_runner.py
examples/: CMakeLists.txt  afk_strategy.cpp  config_example.txt  multiplayer_config_example.txt  multiplayer_map.txt  random_strategy.cpp  simple_greedy_strategy.cpp  simple_map.txt  stupid_map.txt
examples/configs/: config_example.txt  multiplayer_config_example.txt
examples/maps/: big_map.txt  multiplayer_map.txt  simple_map.txt  stupid_map.txt  test_map.txt
examples/strategies/: CMakeLists.txt  afk_strategy.cpp  random_strategy.cpp  simple_greedy_strategy.cpp
sources/: CMakeLists.txt  Cell.cpp  Cell.h  Config.cpp  Config.h  Game.cpp  Game.h  GenMap.cpp  Map.cpp  Map.h  Player.h  main.cpp  testlib.h
