cmake_minimum_required(VERSION 3.10)

project(generals-tournament)

set (CMAKE_CXX_STANDARD 17)

set(PROJECT_BIN_DIR ${CMAKE_CURRENT_SOURCE_DIR}/bin)
set(PROJECT_SOURCES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/sources)
set(PROJECT_EXAMPLES_DIR ${CMAKE_CURRENT_SOURCE_DIR}/examples)
set(PROJECT_STRATEGIES_DIR ${PROJECT_EXAMPLES_DIR}/strategies)
set(PROJECT_POLYGON_DIR ${CMAKE_CURRENT_SOURCE_DIR}/polygon)

add_subdirectory(${PROJECT_SOURCES_DIR})
add_subdirectory(${PROJECT_STRATEGIES_DIR})
# add_subdirectory(${PROJECT_POLYGON_DIR})