add_executable(afk_strategy afk_strategy.cpp)
add_executable(random_strategy random_strategy.cpp)
add_executable(simple_greedy_strategy simple_greedy_strategy.cpp)
set_target_properties(afk_strategy random_strategy simple_greedy_strategy PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_DIR})

# add_executable(smart_strategy smart_strategy.cpp)
# add_executable(super_smart_strategy super_smart_strategy.cpp)
# add_executable(vasili vasili.cpp)
# add_executable(uhtyzmaaa uhtyzmaaa.cpp)
# add_executable(not.derwes.at.all not.derwes.at.all.cpp)
# add_executable(EPCSharper EPCSharper.cpp)
# set_target_properties(smart_strategy vasili super_smart_strategy uhtyzmaaa not.derwes.at.all EPCSharper PROPERTIES RUNTIME_OUTPUT_DIRECTORY ${PROJECT_BIN_DIR})
